--- a/agenda-contatos/ios/Runner/Info.plist
+++ b/agenda-contatos/ios/Runner/Info.plist
@@ -3,7 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Flutter Contact Book</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -11,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>agenda_contatos</string>
+	<string>flutter_contact_book</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -41,11 +43,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSPhotoLibraryUsageDescription</key>
+    <key>NSPhotoLibraryUsageDescription</key> 
     <string>Tirar fotos dos contatos.</string>
     <key>NSCameraUsageDescription</key>
     <string>Selecionar uma foto de contato da galeria.</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>Tirar fotos dos contatos.</string>
+    <string>Tirar fotos dos contatos.</string>	
 </dict>
 </plist>
